JumpScript/tests/baselines/reference/parserInterfaceDeclaration3.errors.txt
tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration3.jump(1,1): error TS1044: 'public' modifier cannot appear on a module or namespace element.


==== tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration3.jump (1 errors) ====
    public interface I {
    ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module or namespace element.
    }